# ProjetoElo

./: Cargo.toml  README.md  poisson.ipynb  resultado.txt
elo_compnat/: Cargo.toml  pyproject.toml
elo_compnat/data/: alemanha.csv  analysis.ipynb  aux.ipynb  brasil.csv  brasileirao.csv  brasileirao2.csv  espanha.csv  franca.csv  inglaterra.csv  italia.csv
elo_compnat/python/: build_rust.py  build_rust_release.py  cache.py  main.py  pyproject.toml
elo_compnat/src/: lib.rs
elo_compnat/src/elo/: mod.rs  train.rs
elo_compnat/src/elo/util/: league.rs  mod.rs  season.rs
elo_compnat/src/experimentation/: compare_simulation.rs  mod.rs  run_all_experiments.rs  run_config.rs  run_config2.rs  run_single_experiment.rs  season_standings.rs  simulate_season.rs
elo_compnat/src/util/: game.rs  math.rs  mod.rs  parsing.rs
elo_compnat/src/util/custom_elo/: custom_elo.rs
elo_compnat/src/util/my_elo_lib/: my_elo.rs
test_elo/: Cargo.toml
test_elo/src/: main.rs
