[tool.poetry]
name = "elo-compnat"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.3"
maturin = "^1.1.0"
python-dotenv = "^1.0.0"
pymongo = "^4.4.0"
pygad = "^3.1.0"
numpy = "^1.21.2"
scipy = "^1.7.1"
matplotlib = "^3.4.3"
pyswarms = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
